Test Data And UI Clean Up
Added Raw Files to execute the program over and cleaned up the UI

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,24 @@ gradlew.bat
 MyFirstExcel.xlsx
 *.class
 out/production/resources/excelParser.fxml
+*.bin
+*.lock
+.gradle/buildOutputCleanup/cache.properties
+.idea/
+.idea/*
+.idea/libraries/Gradle__org_apache_commons_commons_collections4_4_1.xml
+.idea/libraries/Gradle__org_apache_poi_poi_3_15.xml
+.idea/libraries/Gradle__org_apache_poi_poi_ooxml_3_15.xml
+.idea/libraries/Gradle__org_apache_poi_poi_ooxml_schemas_3_15.xml
+.idea/libraries/Gradle__org_apache_xmlbeans_xmlbeans_2_6_0.xml
+.idea/libraries/Gradle__junit_junit_4_12.xml
+.idea/libraries/Gradle__org_hamcrest_hamcrest_core_1_3.xml
+.idea/libraries/Gradle__stax_stax_api_1_0_1.xml
+.idea/modules.xml
+.idea/modules/veylab.iml
+.idea/modules/veylab_main.iml
+.idea/modules/veylab_test.iml
+.idea/vcs.xml
+Corrigan.xlsx
+out/*
+~$Corrigan.xlsx
