--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,31 @@
-group 'com.corrigan.technologies'
-version '1.0'
+buildscript {
+  repositories {
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+  }
+  dependencies {
+    classpath "gradle.plugin.com.github.lburgazzoli:gradle-karaf-plugin:0.0.49"
+  }
+}
+
+apply plugin: "com.github.lburgazzoli.karaf"
 
 apply plugin: 'java'
+apply plugin: 'osgi'
 
+
+group 'com.corrigan.technologies'
+version '1.0.1'
 sourceCompatibility = 1.8
 
 repositories {
+  mavenLocal()
   mavenCentral()
 }
 
 dependencies {
+  compile group: 'org.osgi', name: 'org.osgi.core', version: '4.3.0'
   compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.15'
   testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -31,7 +47,53 @@ jar {
 
   manifest {
     attributes 'Main-Class': 'LabApplication'
+    attributes 'Bundle-Activator': 'LabApplication'
+  }
+
+  karaf {
+    features {
+      // See section below for karaf 4 support if using 1.3.0
+      xsdVersion = '1.2.0'
+      version = '1.0.1' // Your project version
+      description = 'Karaf features'
+
+      // Include the current project, false by default
+      includeProject = false
+
+      // Add in extra repositories to the features xml file
+      repository "mvn:org.apache.karaf.cellar/apache-karaf-cellar/4.0.0/xml/features"
+      repository "mvn:org.apache.karaf.features/standard/4.0.0/xml/features"
+
+      // Define a feature named 'common' with dependencies from runtime
+      // configuration (default) and commons
+//
+//      feature {
+//
+//        // Add feature dependency (newest)
+//        feature 'aries-proxy'
+//
+//
+//      }
+      feature {
+        name = 'veylab'
+        description = 'Vey lab feature set'
+
+        // Override configurations
+      }
+    }
+
+    // Enable generation of Karaf Archive KAR based on features defined above.
+    // To generate kar either use generateKar, assemble or install
+    kar {
+      // Optionally set the kar name, default is:
+      //
+      //     ${features.name}-${features.version}.kar
+      //
+      // Extension is automatically set to .kar
+      archiveName = 'veylab'
+    }
   }
 
   exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
 }
+
